@@ -16,7 +16,8 @@ documents those changes that are of interest to users and admins.
     migration.  This dir should be used to put anything that is outside of 
     slurm proper such as a different api or such.
  -- In sched/wiki2: add support for tasklist with node name expressions 
-    and task counts (e.g. TASKLIST=tux[1-4]*2:tux[12-14]*4")
+    and task counts (e.g. TASKLIST=tux[1-4]*2:tux[12-14]*4").
+ -- In select/cons_res with sched/wiki2: fix bug in task layout logic.
  -- Removed all curses info from the bluegene plugin putting it into smap
     where it belongs.  
 
